RESOLVED FIXED35129
[Chromium] autofill should not be shown for read only text fields
https://bugs.webkit.org/show_bug.cgi?id=35129
Summary [Chromium] autofill should not be shown for read only text fields
Jay Campan
Reported 2010-02-18 13:31:56 PST
When a read only input text field is clicked twice, the autofill popup is shown. It should not.
Attachments
Bug fix patch (1.40 KB, patch)
2010-02-18 13:39 PST, Jay Campan
eric: review-
Adding a manual test. (3.74 KB, patch)
2010-02-24 09:57 PST, Jay Campan
levin: review-
levin: commit-queue-
Fixed bad line endings (3.71 KB, patch)
2010-02-24 10:47 PST, Jay Campan
no flags
Jay Campan
Comment 1 2010-02-18 13:39:14 PST
Created attachment 49039 [details] Bug fix patch
Eric Seidel (no email)
Comment 2 2010-02-22 14:09:07 PST
Comment on attachment 49039 [details] Bug fix patch We can write a manual test for this, no? Should go in WebCore/manual-tests/
Jay Campan
Comment 3 2010-02-24 09:57:10 PST
Created attachment 49403 [details] Adding a manual test. Added a manual test in WebCore/manual-tests/chromium.
WebKit Review Bot
Comment 4 2010-02-24 10:18:06 PST
Attachment 49403 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/manual-tests/chromium/no-autofill-on-readonly.html:1: One or more unexpected \r (^M) found; better to use only a \n [whitespace/carriage_return] [1] Suppressing further [whitespace/carriage_return] reports for this file. Total errors found: 32 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Levin
Comment 5 2010-02-24 10:38:47 PST
Comment on attachment 49403 [details] Adding a manual test. r=me except for the style issue and since you aren't a committer r- to fix that up.
Jay Campan
Comment 6 2010-02-24 10:47:56 PST
Created attachment 49411 [details] Fixed bad line endings
WebKit Commit Bot
Comment 7 2010-02-24 21:24:15 PST
Comment on attachment 49411 [details] Fixed bad line endings Clearing flags on attachment: 49411 Committed r55219: <http://trac.webkit.org/changeset/55219>
WebKit Commit Bot
Comment 8 2010-02-24 21:24:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.